--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "My control over personal finances - FrontEnd",
   "main": "index.js",
   "scripts": {
+    "dev": "webpack-dev-server --profress --colors --inline --hot",
+    "production": "webpack --progress -p",
     "lint": "./node_modules/.bin/eslint src/*.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -29,11 +31,40 @@
   },
   "homepage": "https://github.com/robertluiz/my-financesjs-frontend#readme",
   "devDependencies": {
+    "admin-lte": "2.3.6",
+    "axios": "0.15.3",
+    "babel-core": "6.22.1",
+    "babel-loader": "6.2.10",
+    "babel-plugin-react-html-attrs": "2.0.0",
+    "babel-plugin-transform-object-rest-spread": "6.22.0",
+    "babel-preset-es2015": "6.22.0",
+    "babel-preset-react": "6.22.0",
+    "css-loader": "0.26.1",
     "eslint": "^4.16.0",
     "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-webpack": "^1.2.5",
+    "eslint-import-resolver-alias": "^1.0.3",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.6.1",
-    "husky": "^0.15.0-rc.3"
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.9.0",
+    "font-awesome": "4.7.0",
+    "husky": "^0.15.0-rc.3",
+    "ionicons": "3.0.0",
+    "lodash": "4.17.4",
+    "react": "15.4.2",
+    "react-dom": "15.4.2",
+    "react-redux": "4.4.6",
+    "react-redux-toastr": "4.4.2",
+    "react-router": "3.0.2",
+    "redux": "3.6.0",
+    "redux-form": "6.4.1",
+    "redux-multi": "0.1.12",
+    "redux-promise": "0.5.3",
+    "redux-thunk": "2.1.0",
+    "style-loader": "0.13.1",
+    "webpack": "1.14.0",
+    "webpack-dev-server": "1.16.2"
   }
 }
